--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.16",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.1.0",
+    "mini-css-extract-plugin": "^1.3.7",
+    "sass-loader": "^11.0.1",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
   },
@@ -22,6 +26,7 @@
     "@babel/runtime": "^7.12.13",
     "@babel/runtime-corejs2": "^7.12.13",
     "@babel/runtime-corejs3": "^7.12.13",
+    "@popperjs/core": "^2.7.0",
     "bootstrap": "^5.0.0-beta2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
