--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode development",
+    "build": "webpack",
+    "serve": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,16 +16,21 @@
     "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.16",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "fibers": "^5.0.0",
     "html-webpack-plugin": "^5.1.0",
     "mini-css-extract-plugin": "^1.3.7",
+    "node-sass": "^5.0.0",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
-    "webpack": "^5.22.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.13",
-    "@babel/runtime-corejs2": "^7.12.13",
     "@babel/runtime-corejs3": "^7.12.13",
     "@popperjs/core": "^2.7.0",
     "bootstrap": "^5.0.0-beta2",
