--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.12.16",
     "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.16",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
@@ -23,7 +24,7 @@
     "mini-css-extract-plugin": "^1.3.7",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
-    "postcss-loader": "^5.0.0",
+    "postcss-loader": "^4.0.4",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
