--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "fibers": "^5.0.0",
+    "html-webpack-link-type-plugin": "^1.1.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.7",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
     "postcss-loader": "^4.0.4",
+    "precss": "^4.0.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
