--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "dev": "webpack serve --mode development --env development",
+    "dev": "webpack serve --mode development --env development --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
