--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "webpack --mode development",
     "dev": "webpack serve --mode development --env development --hot",
+    "start": "cross-env NODE_ENV=development webpack --mode development",
+    "deploy": "cross-env NODE_ENV=production webpack production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +20,7 @@
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "fibers": "^5.0.0",
     "html-webpack-link-type-plugin": "^1.1.0",
