--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "dev": "webpack serve --mode development --env development --hot",
+    "dev": "webpack serve --mode development",
     "start": "cross-env NODE_ENV=development webpack --mode development",
     "deploy": "cross-env NODE_ENV=production webpack production",
     "test": "echo \"Error: no test specified\" && exit 1"
