--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "fibers": "^5.0.0",
+    "html-loader": "^2.1.1",
     "html-webpack-link-type-plugin": "^1.1.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.7",
