--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "fibers": "^5.0.0",
+    "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-link-type-plugin": "^1.1.0",
     "html-webpack-plugin": "^5.2.0",
