--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/runtime-corejs3": "^7.12.13",
     "@popperjs/core": "^2.7.0",
     "bootstrap": "^5.0.0-beta2",
+    "curl": "^0.1.4",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
