--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "fibers": "^5.0.0",
@@ -45,6 +44,8 @@
     "@popperjs/core": "^2.7.0",
     "bootstrap": "^5.0.0-beta2",
     "curl": "^0.1.4",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
